--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,5 +40,9 @@ bme280 = "0.1.1"
 smallvec = "0.6.6"
 chrono = { version = "0.4.6", features = ["serde"] }
 bytes = "0.4.11"
+byteorder = "1.3.1"
 
 crossbeam-channel = "0.3"
+
+sled = "0.24.1"
+pagecache = "0.17.0"
