--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,20 @@ sensors_connected = []
 live_server = []
 
 [dependencies]
-actix-web = { version = "0.7.15", features = ["rust-tls"] }
-actix-web-httpauth = "0.1.0"
-actix = "0.7.5"
+actix-web = { version = "1.0.3", features = ["rust-tls"] }
+actix-net = "0.2.4"
+actix-identity = "0.1.0"
+actix-files = "0.1.3"
+actix-rt = "0.2.4"
+actix-service = "0.4.1"
+actix-web-httpauth = "0.3.2"
+rustls = "0.15.2"
+
+#philipshue = { git = "https://github.com/dskleingeld/philipshue", branch = "master" }
+#for local dev purpose we use below targets
+philipshue = { path = "../philipshue"}
+secure-ble = { path = "../home_sensors/ble/central"}
+
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 log = "0.4"
@@ -26,14 +37,8 @@ sysfs_gpio = { git = "https://github.com/rust-embedded/rust-sysfs-gpio", branch 
 
 tokio = "0.1.15"
 futures = { version = "0.1"}
-
-#dont forget to run cargo update when these change
-philipshue = { git = "https://github.com/dskleingeld/philipshue", branch = "master" }
-dataserver = { git = "https://github.com/dskleingeld/dataserver", branch = "master" }
-
-#for local dev purpose we use below targets
-#dataserver = { path = "../dataserver"}
-#philipshue = { path = "../philipshue"}
+bincode = "1.0.1"
+ring = "0.14.6"
 
 linux-embedded-hal = "0.2.2"
 bme280 = "0.1.1"
