--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ actix-service = "0.4.1"
 actix-web-httpauth = "0.3.2"
 rustls = "0.15.2"
 
-#philipshue = { git = "https://github.com/dskleingeld/philipshue", branch = "master" }
-#for local dev purpose we use below targets
-philipshue = { path = "../philipshue"}
+philipshue = { git = "https://github.com/dskleingeld/philipshue", branch = "master" }
+# for local dev purpose we use below targets
+# philipshue = { path = "../philipshue"}
 secure-ble = { path = "../home_sensors/ble/central"}
 
 serde = { version = "1.0", features = ["derive"] }
@@ -47,12 +47,13 @@ smallvec = "0.6.6"
 chrono = { version = "0.4.6", features = ["serde"] }
 bytes = "0.4.11"
 byteorder = "1.3.1"
+num = { version = "0.2"}
 
 crossbeam-channel = "0.3"
 
 sled = "0.24.1"
 pagecache = "0.17.0"
-reqwest = "0.9.17"
+reqwest = "0.9.15"
 
 mpd = "0.0.12"
 dirs = "2.0.1"
