--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,31 +14,32 @@ sensors_connected = []
 live_server = []
 
 [dependencies]
-actix-web = { version = "1.0.3", features = ["rust-tls"] }
-actix-net = "0.2.4"
-actix-identity = "0.1.0"
-actix-files = "0.1.3"
-actix-rt = "0.2.4"
-actix-service = "0.4.1"
-actix-web-httpauth = "0.3.2"
-rustls = "0.15.2"
+futures = "0.3.1"
+actix-web = { version = "2", features = ["rustls"] }
+actix-net = "0.2.6"
+actix-identity = "0.2.0"
+actix-files = "0.2.1"
+actix-rt = "1"
+actix-service = "1.0"
+actix-web-httpauth = "0.4"
+rustls = "0.16"
 
 philipshue = { git = "https://github.com/dskleingeld/philipshue", branch = "master" }
 # for local dev purpose we use below targets
 # philipshue = { path = "../philipshue"}
-secure-ble = { path = "../home_sensors/ble/central"}
+# secure-ble = { path = "../home_sensors/ble/central"}
 
+structopt = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 log = "0.4"
 
-#sysfs_gpio = { version = "0.5.3", features = ["use_tokio"] }
-sysfs_gpio = { git = "https://github.com/rust-embedded/rust-sysfs-gpio", branch = "master", features = ["use_tokio"] }
+sysfs_gpio = { version = "0.5.4", features = ["use_tokio"] }
+#sysfs_gpio = { git = "https://github.com/rust-embedded/rust-sysfs-gpio", branch = "master", features = ["use_tokio"] }
 
 tokio = "0.1.15"
-futures = { version = "0.1"}
 bincode = "1.0.1"
-ring = "0.14.6"
+ring = "0.16"
 
 linux-embedded-hal = "0.2.2"
 bme280 = "0.1.1"
@@ -51,7 +52,7 @@ num = { version = "0.2"}
 
 crossbeam-channel = "0.3"
 
-sled = "0.24.1"
+sled = "0.30"
 pagecache = "0.17.0"
 reqwest = "0.9.15"
 
