--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,9 +54,12 @@ crossbeam-channel = "0.3"
 
 sled = "0.30"
 pagecache = "0.17.0"
-reqwest = "0.9.15"
+reqwest = {version = "0.10", features = ["blocking"]}
 
 mpd = "0.0.12"
 dirs = "2.0.1"
 rand = "0.6"
 retry = "0.5.1"
+
+telegram-bot = "0.6"
+serde_json = "1.0"
