--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,11 @@ sensors_connected = []
 live_server = []
 
 [dependencies]
-futures = "0.3.1"
+futures = "0.3"
 actix-web = { version = "2", features = ["rustls"] }
-actix-net = "0.2.6"
-actix-identity = "0.2.0"
-actix-files = "0.2.1"
+actix-net = "0.2"
+actix-identity = "0.2"
+actix-files = "0.2"
 actix-rt = "1"
 actix-service = "1.0"
 actix-web-httpauth = "0.4"
@@ -34,32 +34,31 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 log = "0.4"
 
-sysfs_gpio = { version = "0.5.4", features = ["use_tokio"] }
-#sysfs_gpio = { git = "https://github.com/rust-embedded/rust-sysfs-gpio", branch = "master", features = ["use_tokio"] }
+gpio-cdev = { git = "https://github.com/rust-embedded/gpio-cdev", branch = "master" }
 
-tokio = "0.1.15"
-bincode = "1.0.1"
+#tokio = "0.1.15"
+bincode = "1.0"
 ring = "0.16"
 
-linux-embedded-hal = "0.2.2"
-bme280 = "0.1.1"
+linux-embedded-hal = "0.2"
+bme280 = "0.1"
 
-smallvec = "0.6.6"
-chrono = { version = "0.4.6", features = ["serde"] }
-bytes = "0.4.11"
-byteorder = "1.3.1"
+smallvec = "0.6"
+chrono = { version = "0.4", features = ["serde"] }
+bytes = "0.4"
+byteorder = "1.3"
 num = { version = "0.2"}
 
 crossbeam-channel = "0.3"
 
 sled = "0.30"
-pagecache = "0.17.0"
+pagecache = "0.17"
 reqwest = {version = "0.10", features = ["blocking"]}
 
 mpd = "0.0.12"
-dirs = "2.0.1"
+dirs = "2"
 rand = "0.6"
-retry = "0.5.1"
+retry = "0.5"
 
 telegram-bot = "0.6"
 serde_json = "1.0"
