--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ live_server = []
 
 [dependencies]
 futures = "0.3"
+async-std = "1"
+
 actix-web = { version = "2", features = ["rustls"] }
 actix-net = "0.2"
 actix-identity = "0.2"
@@ -35,6 +37,7 @@ serde_yaml = "0.8"
 log = "0.4"
 
 gpio-cdev = { git = "https://github.com/rust-embedded/gpio-cdev", branch = "master" }
+nix = "0.17"
 
 #tokio = "0.1.15"
 bincode = "1.0"
