--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ crossbeam-channel = "0.3"
 
 sled = "0.30"
 pagecache = "0.17"
-reqwest = {version = "0.10", features = ["blocking"]}
+reqwest = {version = "0.10"}
 
 mpd = "0.0.12"
 dirs = "2"
