--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,6 @@ gpio-cdev = { git = "https://github.com/rust-embedded/gpio-cdev", branch = "mast
 nix = "0.17"
 
 #tokio = "0.1.15"
-bincode = "1.0"
 ring = "0.16"
 
 linux-embedded-hal = "0.2"
@@ -65,3 +64,5 @@ retry = "0.5"
 
 telegram-bot = "0.6"
 serde_json = "1.0"
+regex = "1"
+bincode = "1.2"
