--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ chrono = { version = "0.4", features = ["serde"] }
 bytes = "0.4"
 byteorder = "1.3"
 num = { version = "0.2"}
+hex = "0.4.2"
 
 crossbeam-channel = "0.3"
 
