--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ bme280 = "0.1"
 
 smallvec = "0.6"
 chrono = { version = "0.4", features = ["serde"] }
+chrono-tz = "0.5.1"
 bytes = "0.4"
 byteorder = "1.3"
 num = { version = "0.2"}
