--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ bincode = "1.3.1"
 log = "0.4"
 fern = { version = "0.5.6", features = ["colored"] }
 
+sensor_value = { git = "https://github.com/dskleingeld/sensor_central.git", branch = "boolean-fields" }
 gpio-cdev = { git = "https://github.com/rust-embedded/gpio-cdev", branch = "master" }
 nix = "0.17"
 
