--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,75 +1,9 @@
-[package]
-name = "ha"
-version = "0.1.0"
-authors = ["David Kleingeld <dskleingeld@gmail.com>"]
+[workspace]
+resolver = "2"
+members = ["crates/*"]
+
+[workspace.package]
+rust-version = "1.70"
 edition = "2021"
-
-[features]
-default = []
-
-# Enable code that expects sensor hardware to be present. Will stop execution
-# if hardware is not present,
-# on by default for testing use cargo flag: --no-default-features
-sensors_connected = []
-live_server = []
-
-[dependencies]
-futures = "0.3"
-tokio = { version = "1", features = ["full"] }
-
-# actix-web = { version = "4", features = ["rustls"] }
-# actix-net = "0.2"
-# actix-identity = "0.2"
-# actix-files = "0.2"
-# actix-rt = "1"
-# actix-service = "1.0"
-# actix-web-httpauth = "0.4"
-# rustls = "0.16"
-
-philipshue = { git = "https://github.com/dskleingeld/philipshue", branch = "master" }
-# for local dev purpose we use below targets
-# philipshue = { path = "../philipshue"}
-# secure-ble = { path = "../home_sensors/ble/central"}
-
-structopt = "0.3"
-serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.8"
-bincode = "1.3"
-
-thiserror = "1.0"
-fern = { version = "0.5.9", features = ["colored"] }
-
-sensor_value = { git = "https://github.com/dskleingeld/sensor_central.git", branch = "main" }
-# nix = "0.17"
-# ring = "0.16"
-linux-embedded-hal = "0.2"
-bme280 = "0.1"
-
-smallvec = "0.6"
-chrono = { version = "0.4", features = ["serde"] }
-chrono-tz = "0.5.3"
-bytes = "0.4"
-byteorder = "1.4"
-num = { version = "0.2"}
-hex = "0.4.3"
-
-crossbeam-channel = "0.3"
-
-sled = "0.34"
-# pagecache = "0.17"
-reqwest = {version = "0.10", default-features = false, features = ["rustls-tls"]}
-
-mpd = "0.1"
-dirs = "2"
-rand = "0.6"
-retry = "1"
-
-telegram-bot = {version = "0.7", default-features = false, features = ["rustls"]}
-serde_json = "1.0"
-regex = "1"
-futures-util = "0.3.30"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-tracing-journald = "0.3.0"
-log-panics = "2.1.0"
-axum = "0.7.4"
+license = "GPLv3"
+authors = ["David Kleingeld & Eva van Houten"]
