--- a/crates/system/Cargo.toml
+++ b/crates/system/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "ha"
 version = "0.1.0"
-authors = ["David Kleingeld <dskleingeld@gmail.com>"]
-edition = "2021"
+rust-version.workspace = true
+edition.workspace = true
+license.workspace = true
+authors.workspace = true
 
 [features]
 default = []
@@ -24,27 +26,28 @@ axum-macros = "0.4.1"
 philipshue = { git = "https://github.com/dvdsk/philipshue", branch = "master" }
 
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.8"
+serde_yaml = "0.9"
 bincode = "1.3"
 
 thiserror = "1.0"
 
-sensor_value = { git = "https://github.com/dskleingeld/sensor_central.git", branch = "main" }
+# todo deprecate in favor of protocol lib
+sensor_value = { git = "https://github.com/dvdsk/sensor_central.git", branch = "main" }
 
 chrono = { version = "0.4", features = ["serde"] }
-bytes = "0.4"
+bytes = "1.5"
 byteorder = "1.4"
-num = { version = "0.2"}
+num = { version = "0.4"}
 
-crossbeam-channel = "0.3"
+crossbeam-channel = "0.5"
 
 sled = "0.34"
 # pagecache = "0.17"
-reqwest = {version = "0.10", default-features = false, features = ["rustls-tls"]}
+reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]}
 
 mpd = "0.1"
-rand = "0.6"
-retry = "1"
+rand = "0.8"
+retry = "2"
 
 futures-util = "0.3.30"
 tracing = "0.1.40"
