reorganises control system

--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -9,4 +9,11 @@ authors.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.197", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"], default-features = false }
+postcard = { version = "1.0", features = ["experimental-derive"] }
+heapless = { version = "0.8.0", features = ["serde"] }
+strum = { version = "0.26.2", default-features = false }
+
+[features]
+default = ["alloc"]
+alloc = ["postcard/alloc", "serde/std"]
