--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -31,9 +31,6 @@ bincode = "1.3"
 
 thiserror = "1.0"
 
-# todo deprecate in favor of protocol lib
-sensor_value = { git = "https://github.com/dvdsk/sensor_central.git", branch = "main" }
-
 chrono = { version = "0.4", features = ["serde"] }
 bytes = "1.5"
 byteorder = "1.4"
@@ -55,3 +52,6 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing-journald = "0.3.0"
 log-panics = "2.1.0"
 clap = { version = "4.5.2", features = ["derive"] }
+futures-concurrency = "7.5.0"
+time = { version = "0.3.36", features = ["local-offset"] }
+strum = { version = "0.26.2", default-features = false, features = ["derive"] }
