--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -16,7 +16,7 @@ sensors_connected = []
 live_server = []
 
 [dependencies]
-protocol = { path = "../protocol" }
+protocol = { path = "../protocol", features = ["alloc"] }
 
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
