--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -13,6 +13,17 @@ serde = { version = "1.0", features = ["derive"], default-features = false }
 postcard = { version = "1.0", features = ["experimental-derive"] }
 heapless = { version = "0.8.0", features = ["serde"] }
 strum = { version = "0.26.2", default-features = false }
+thiserror = { version = "1.0", optional = true }
+defmt = "0.3.6"
+
+# sensors, we need these to be able to display/receive their errors
+sht31 = { version = "0.3.0", git = "https://github.com/dvdsk/SHT31-rs", features = ["serde", "postcard"]}
+bosch-bme680 = { version = "1.0.2", git = "https://github.com/dvdsk/async-bosch-bme680", features = ["serde", "postcard"] }
+max44009 = { version = "0.2", git = "https://github.com/dvdsk/max44009-rs", features = ["serde", "postcard"] }
+
+# needed for bme680 error I2C type 
+embassy-stm32 = { version = "0.1.0", features = ["stm32f401cc"] }
+embassy-embedded-hal = "0.1.0"
 
 [features]
-alloc = ["postcard/alloc", "serde/std"]
+alloc = ["postcard/alloc", "serde/std", "sht31/thiserror", "bosch-bme680/thiserror"]
