add tree to tui

--- a/crates/sensor_tui/Cargo.toml
+++ b/crates/sensor_tui/Cargo.toml
@@ -10,8 +10,11 @@ authors.workspace = true
 color-eyre = "0.6.3"
 crossterm = "0.27.0"
 histogram = "0.10.1"
-protocol = { path = "/home/david/Documents/HomeAutomation/crates/protocol" }
 ratatui = "0.26.2"
 tracing = "0.1.40"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tui-tree-widget = "0.20.0"
+
+protocol = { path = "/home/david/Documents/HomeAutomation/crates/protocol" }
+data-server = { path = "/home/david/Documents/HomeAutomation/crates/data-server" }
