--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -8,6 +8,7 @@ authors.workspace = true
 
 [dependencies]
 protocol = { path = "../protocol" }
+data-server = { path = "../data-server" }
 
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
@@ -23,13 +24,13 @@ bincode = "1.3"
 thiserror = "1.0"
 
 chrono = { version = "0.4", features = ["serde"] }
+time = { version = "0.3.36", features = ["macros"] }
+tz-rs = "0.6.14"
+
 bytes = "1.5"
 byteorder = "1.4"
 
-crossbeam-channel = "0.5"
-
 sled = "0.34"
-reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]}
 
 mpd = "0.1"
 rand = "0.8"
@@ -41,6 +42,4 @@ tracing-journald = "0.3.0"
 log-panics = "2.1.0"
 clap = { version = "4.5.4", features = ["derive"] }
 futures-concurrency = "7.5.0"
-time = { version = "0.3.36", features = ["macros"] }
 strum = { version = "0.26.2", default-features = false, features = ["derive"] }
-tz-rs = "0.6.14"
