cleaned up unsused dependencies

--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -12,7 +12,7 @@ data-server = { path = "../data-server" }
 
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
-axum = "0.7.4"
+axum = { version = "0.7.4", default-features = false, features = ["tokio", "http1"] }
 axum-macros = "0.4.1"
 
 philipshue = { git = "https://github.com/dvdsk/philipshue", branch = "master" }
