--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -15,7 +15,7 @@ tokio = { version = "1", features = ["full"] }
 axum = { version = "0.7.4", default-features = false, features = ["tokio", "http1"] }
 axum-macros = "0.4.1"
 
-philipshue = { git = "https://github.com/dvdsk/philipshue", branch = "master", default-features = false }
+hueclient = { git = "https://github.com/dvdsk/hue.rs"}
 
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
