--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -11,7 +11,7 @@ authors.workspace = true
 [dependencies]
 serde = { version = "1.0", features = ["derive"], default-features = false }
 postcard = { version = "1.0", features = ["experimental-derive"] }
-heapless = { version = "0.8.0", features = ["serde"] }
+heapless = { version = "0.8.0", features = ["serde", "defmt-03"] }
 strum = { version = "0.26.2", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0", optional = true }
 defmt = "0.3.6"
