--- a/sensor-nodes/bed-sensors/Cargo.toml
+++ b/sensor-nodes/bed-sensors/Cargo.toml
@@ -43,7 +43,7 @@ mhzx = { version = "0.3.0", path = "/home/david/tmp/mh-zx-driver", features = ["
 sps30-async = { version = "0.2.0", path = "/home/david/tmp/sps30", features = ["serde", "postcard"] }
 
 # encoding
-protocol = { path = "../protocol" }
+protocol = { path = "../../crates/protocol" }
 
 [patch.crates-io]
 embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "128575a" }
