adds rng based on pac adc to feed network seed

--- a/sensor-nodes/bed-sensors/.cargo/config.toml
+++ b/sensor-nodes/bed-sensors/.cargo/config.toml
@@ -2,6 +2,7 @@
 # replace STM32F103C8 with your chip as listed in `probe-rs chip list`
 # runner = "probe-rs run --chip STM32F103C8"
 runner = "probe-rs run --chip STM32F401CCUx"
+linker = "flip-link"
 
 [build]
 # target = "thumbv7m-none-eabi" for f103
@@ -9,7 +10,7 @@ target = "thumbv7em-none-eabihf"
 
 [env]
 DEFMT_LOG = "debug,sps30_async=trace,bosch_bme680=info"
-EMBASSY_EXECUTOR_TASK_ARENA_SIZE="4000"
+EMBASSY_EXECUTOR_TASK_ARENA_SIZE="7000"
 
 # [unstable]
 # build-std = ["core"]
