--- a/sensor-nodes/bed-sensors/Cargo.toml
+++ b/sensor-nodes/bed-sensors/Cargo.toml
@@ -31,7 +31,6 @@ panic-probe = { version = "0.3", features = ["print-defmt"] }
 futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
 heapless = { version = "0.8", default-features = false }
 nb = "1.0.0"
-rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 static_cell = "2.0.0"
 
 # sensors
@@ -44,23 +43,38 @@ sps30-async = { version = "0.2.0", path = "/home/david/tmp/sps30", features = ["
 
 # encoding
 protocol = { path = "../../crates/protocol" }
+
+# used only for RNG since embassy's adc is currently broken and we need
+# an adc to get a true RNG.
+# stm32f4xx-hal = { version = "0.21.0", default-features = false, features = ["stm32f401"] }
+stm32f4 = { version = "0.15.1", default-features = false, features = ["stm32f401"] }
+rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
 # fasthash = { version = "0.4.0", default-features = false }
 
 [patch.crates-io]
-embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
-embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
-embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
-embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
-embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
-embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
-embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
-embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
+# embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
+# embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
+# embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
+# embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
+# embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
+# embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
+# embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
+# embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "039d8ed" }
+
+embassy-stm32 = {path = "../../../embassy/embassy-stm32" }
+embassy-net = {path = "../../../embassy/embassy-net" }
+embassy-net-wiznet = {path = "../../../embassy/embassy-net-wiznet" }
+embassy-sync = {path = "../../../embassy/embassy-sync" }
+embassy-executor = {path = "../../../embassy/embassy-executor" }
+embassy-embedded-hal = {path = "../../../embassy/embassy-embedded-hal" }
+embassy-time = {path = "../../../embassy/embassy-time" }
+embassy-futures = {path = "../../../embassy/embassy-futures" }
 
 [profile.dev]
 opt-level = "s"
 
 [profile.release]
-lto = true
+lto = "fat"
 opt-level = "s"
 incremental = false
 codegen-units = 1
