wraps i2c sensors providing re-init on error

--- a/sensor-nodes/bed-sensors/.cargo/config.toml
+++ b/sensor-nodes/bed-sensors/.cargo/config.toml
@@ -9,8 +9,8 @@ linker = "flip-link"
 target = "thumbv7em-none-eabihf"
 
 [env]
-DEFMT_LOG = "debug,sps30_async=trace,bosch_bme680=info"
-EMBASSY_EXECUTOR_TASK_ARENA_SIZE="7000"
+DEFMT_LOG = "debug,sps30_async=info,bosch_bme680=info"
+EMBASSY_EXECUTOR_TASK_ARENA_SIZE="8000"
 
 # [unstable]
 # build-std = ["core"]
