vendors in bitspec, bugfixes to list data and get data

--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -4,6 +4,11 @@ edition.workspace = true
 license.workspace = true
 authors.workspace = true
 
+[features]
+api = []
+server = []
+default = ["api", "server"]
+
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 color-eyre = "0.6.3"
