--- a/crates/data-store/Cargo.toml
+++ b/crates/data-store/Cargo.toml
@@ -6,6 +6,11 @@ edition.workspace = true
 license.workspace = true
 authors.workspace = true
 
+[features]
+api = []
+server = []
+default = ["api", "server"]
+
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 color-eyre = "0.6.3"
@@ -17,10 +22,8 @@ time = { version = "0.3", features = ["serde"] }
 protocol = { path = "../protocol", features = ["alloc"] }
 data-server = { path = "../data-server" }
 
-# bitspec = { git = "https://github.com/dvdsk/bitspec" }
-bitspec = { path = "/home/david/Documents/bitspec" }
-byteseries = { git = "https://github.com/dvdsk/byteseries", features = ["smallvec"] }
-# byteseries = { path = "/home/david/Documents/byteseries" }
+# byteseries = { git = "https://github.com/dvdsk/byteseries", features = ["smallvec"] }
+byteseries = { path = "/home/david/Documents/byteseries" }
 tokio = { version = "1.38.0", features = ["fs", "net", "rt-multi-thread", "sync"] }
 futures-concurrency = "7.6.1"
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
@@ -29,6 +32,9 @@ serde = { version = "1.0.203", features = ["derive"] }
 thiserror = "1.0.61"
 futures = "0.3.30"
 smallvec = "2.0.0-alpha.6"
+num = "0.4.3"
 
 [dev-dependencies]
 futures-concurrency = "7.6.1"
+reserve-port = "2.0.1"
+temp-dir = "0.1.13"
