--- a/crates/desk-sensors/Cargo.toml
+++ b/crates/desk-sensors/Cargo.toml
@@ -16,7 +16,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing-error = "0.2.0"
 
-protocol = { path = "../protocol", features = ["alloc"] }
+protocol = { workspace = true, features = ["alloc"] }
 tokio = { version = "1.37.0", features = ["rt", "time", "macros"] }
 embedded-hal-async = "1.0.0"
 heapless = "0.8.0"
