--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -10,14 +10,14 @@ server = []
 default = ["api", "server"]
 
 [dependencies]
-clap = { version = "4", features = ["derive"] }
-color-eyre = "0.6.3"
-tracing = "0.1.40"
-tracing-error = "0.2.0"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+clap = { workspace = true, features = ["derive"] }
+color-eyre = { workspace = true }
+tracing = { workspace = true }
+tracing-error = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
 protocol = { workspace = true, features = ["alloc"] }
-tokio = { version = "1.37.0", features = ["rt", "macros", "net", "sync", "io-util"] }
+tokio = { workspace = true, features = ["rt", "macros", "net", "sync", "io-util"] }
 tokio-stream = { version = "0.1.15", features = ["net"] }
 thiserror = "1.0.61"
 
