--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -11,7 +11,7 @@ protocol = { workspace = true, features = ["alloc"] }
 data-server = { workspace = true }
 
 futures = "0.3"
-tokio = { version = "1", features = ["full"] }
+tokio = { workspace = true, features = ["full"] }
 axum = { version = "0.7.4", default-features = false, features = ["tokio", "http1"] }
 axum-macros = "0.4.1"
 
@@ -24,7 +24,7 @@ bincode = "1.3"
 thiserror = "1.0"
 
 chrono = { version = "0.4", features = ["serde"] }
-time = { version = "0.3.36", features = ["macros"] }
+time = { workspace = true, features = ["macros"] }
 tz-rs = "0.6.14"
 
 bytes = "1.5"
@@ -36,8 +36,8 @@ mpd = "0.1"
 rand = "0.8"
 
 futures-util = "0.3.30"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing = {workspace = true}
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tracing-journald = "0.3.0"
 clap = { version = "4.5.4", features = ["derive"] }
 futures-concurrency = "7.5.0"
