--- a/crates/data-store/Cargo.toml
+++ b/crates/data-store/Cargo.toml
@@ -12,24 +12,24 @@ server = []
 default = ["api", "server"]
 
 [dependencies]
-clap = { version = "4", features = ["derive"] }
-color-eyre = "0.6.3"
-tracing = "0.1.40"
-tracing-error = "0.2.0"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-time = { version = "0.3", features = ["serde"] }
+clap = { workspace = true, features = ["derive"] }
+color-eyre = { workspace = true }
+tracing = { workspace = true }
+tracing-error = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
+time = { workspace = true, features = ["serde"] }
 
 protocol = { workspace = true, features = ["alloc"] }
 data-server = { workspace = true }
 
 # byteseries = { git = "https://github.com/dvdsk/byteseries", features = ["smallvec"] }
 byteseries = { path = "/home/david/Documents/byteseries" }
-tokio = { version = "1.38.0", features = ["fs", "net", "rt-multi-thread", "sync"] }
+tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
 futures-concurrency = "7.6.1"
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
 tokio-util = { version = "0.7.11", features = ["codec"] }
 serde = { version = "1.0.203", features = ["derive"] }
-thiserror = "1.0.61"
+thiserror = { workspace = true }
 futures = "0.3.30"
 smallvec = "2.0.0-alpha.6"
 num = "0.4.3"
