--- a/crates/sensor-tui/Cargo.toml
+++ b/crates/sensor-tui/Cargo.toml
@@ -7,15 +7,18 @@ authors.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-color-eyre = "0.6.3"
+color-eyre = { workspace = true }
 crossterm = "0.27.0"
 histogram = "0.11"
 ratatui = "0.27"
-tracing = "0.1.40"
-tracing-error = "0.2.0"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tui-tree-widget = { version = "0.21.0", git = "https://github.com/dvdsk/tui-rs-tree-widget" }
+
+tokio =  { workspace = true}
+tracing = {workspace = true}
+tracing-error = { workspace = true }
+tracing-subscriber = { workspace =true, features = ["env-filter"] }
 
 protocol = { workspace = true, features = ["alloc"] }
 data-server = { workspace = true }
 data-store = { workspace = true }
+time = { workspace = true }
