--- a/crates/sensor-tui/Cargo.toml
+++ b/crates/sensor-tui/Cargo.toml
@@ -12,6 +12,7 @@ crossterm = "0.27.0"
 histogram = "0.11"
 ratatui = "0.27"
 tui-tree-widget = { version = "0.21.0", git = "https://github.com/dvdsk/tui-rs-tree-widget" }
+clap = { workspace = true }
 
 tokio =  { workspace = true}
 tracing = {workspace = true}
