fixes deploy_all.sh + renames/tiny refactors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ tracing = "0.1.40"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 time = "0.3.36"
-clap = "4"
+clap = { version = "4", features = ["derive"]} 
 thiserror = "1"
 
 [workspace.package]
