--- a/crates/brain/Cargo.toml
+++ b/crates/brain/Cargo.toml
@@ -39,6 +39,6 @@ futures-util = "0.3.30"
 tracing = {workspace = true}
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tracing-journald = "0.3.0"
-clap = { version = "4.5.4", features = ["derive"] }
+clap = { workspace = true }
 futures-concurrency = "7.5.0"
 strum = { version = "0.26.2", default-features = false, features = ["derive"] }
