--- a/crates/data-server/Cargo.toml
+++ b/crates/data-server/Cargo.toml
@@ -10,7 +10,7 @@ server = []
 default = ["api", "server"]
 
 [dependencies]
-clap = { workspace = true, features = ["derive"] }
+clap = { workspace = true }
 color-eyre = { workspace = true }
 tracing = { workspace = true }
 tracing-error = { workspace = true }
