--- a/crates/data-store/Cargo.toml
+++ b/crates/data-store/Cargo.toml
@@ -33,8 +33,10 @@ thiserror = { workspace = true }
 futures = "0.3.30"
 smallvec = "2.0.0-alpha.6"
 num = "0.4.3"
+nucleo-matcher = "0.3.1"
 
 [dev-dependencies]
 futures-concurrency = "7.6.1"
+nucleo = "0.5.0"
 reserve-port = "2.0.1"
 temp-dir = "0.1.13"
