--- a/crates/sensor-tui/Cargo.toml
+++ b/crates/sensor-tui/Cargo.toml
@@ -23,3 +23,4 @@ protocol = { workspace = true, features = ["alloc"] }
 data-server = { workspace = true }
 data-store = { workspace = true }
 time = { workspace = true }
+thiserror.workspace = true
