--- a/crates/sensor-tui/Cargo.toml
+++ b/crates/sensor-tui/Cargo.toml
@@ -22,6 +22,6 @@ tracing-subscriber = { workspace =true, features = ["env-filter"] }
 protocol = { workspace = true, features = ["alloc"] }
 data-server = { workspace = true }
 data-store = { workspace = true }
-time = { workspace = true }
+jiff = { workspace = true }
 thiserror.workspace = true
 itertools = "0.13.0"
