--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tracing = "0.1.40"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 time = "0.3.36"
+jiff = "0.1"
 clap = { version = "4", features = ["derive"]} 
 thiserror = "1"
 
