--- a/crates/data-store/Cargo.toml
+++ b/crates/data-store/Cargo.toml
@@ -22,8 +22,7 @@ jiff = { workspace =true, features = ["serde"] }
 protocol = { workspace = true, features = ["alloc", "thiserror"] }
 data-server = { workspace = true }
 
-# byteseries = { git = "https://github.com/dvdsk/byteseries", features = ["smallvec"] }
-byteseries = { path = "/home/david/Documents/byteseries" }
+byteseries = { workspace = true }
 tokio = { workspace = true, features = ["fs", "net", "rt-multi-thread", "sync"] }
 futures-concurrency = "7.6.1"
 tokio-serde = { version = "0.9.0", features = ["bincode"] }
