--- a/crates/sensor-tui/Cargo.toml
+++ b/crates/sensor-tui/Cargo.toml
@@ -15,13 +15,14 @@ tui-tree-widget = { version = "0.21.0", git = "https://github.com/dvdsk/tui-rs-t
 clap = { workspace = true }
 
 tokio =  { workspace = true}
-tracing = {workspace = true}
+tracing.workspace = true
 tracing-error = { workspace = true }
-tracing-subscriber = { workspace =true, features = ["env-filter"] }
+tracing-subscriber.workspace = true 
 
 protocol = { workspace = true, features = ["alloc"] }
 data-server = { workspace = true }
 data-store = { workspace = true }
+log-store = { workspace = true, features = ["api"] }
 jiff = { workspace = true }
 thiserror.workspace = true
 itertools = "0.13.0"
